--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>TodoList</title>
+  <title>Todo List</title>
   <base href="/">
 
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+  <link rel="stylesheet" type="text/css" href="https://bootswatch.com/yeti/bootstrap.min.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
 </head>
 <body>
   <app-root>Loading...</app-root>
